# evolution-exchange

./: Makefile  README.md  evolution-ews-gnome-3-0.gitcc16df2-3.8.5-create-appointments.patch  evolution-ews-gnome-3-0.gitcc16df2-account-type-check.patch  evolution-ews-gnome-3-0.gitcc16df2-book-double-free-crash.patch  evolution-ews-gnome-3-0.gitcc16df2-camel-session-global-variable.patch  evolution-ews-gnome-3-0.gitcc16df2-empty-search-hides-contacts.patch  evolution-ews-gnome-3-0.gitcc16df2-free-busy-fetch-and-crash.patch  evolution-ews-gnome-3-0.gitcc16df2-free-busy-timezone-change.patch  evolution-ews-gnome-3-0.gitcc16df2-get-attachments-prototype-fix.patch  evolution-ews-gnome-3-0.gitcc16df2-multiple-contacts-remove.patch  evolution-ews-gnome-3-0.gitcc16df2-no-alarm-after-start-capability.patch  evolution-ews-gnome-3-0.gitcc16df2-no-offline-sync-gal-crash.patch  evolution-ews-gnome-3-0.gitcc16df2-searchable-gal.patch  evolution-ews-gnome-3-0.gitcc16df2-sync-with-3.8.2.patch  evolution-ews-gnome-3-0.gitcc16df2-sync-with-3.8.3.patch  evolution-ews-gnome-3-0.gitcc16df2-sync-with-3.8.4.patch  evolution-ews-gnome-3-0.gitcc16df2-sync-with-3.8.5.patch  evolution-ews-gnome-3-0.gitcc16df2-translation-updates-ews.patch  evolution-ews-gnome-3-0.gitcc16df2-translation-updates-ews2.patch  evolution-exchange-2.10.1-fix-64bit-acinclude.patch  evolution-exchange-2.32.3-covscan-issues-eex.patch  evolution-exchange-2.32.3-translation-updates-eex.patch  evolution-exchange-2.32.3-unshipped-arch-docs.patch  evolution-exchange.spec
src/: ChangeLog  Makefile.am  Makefile.in  NEWS  acinclude.m4  aclocal.m4  config.h.in  configure  configure.ac
src/addressbook/: Makefile.am  Makefile.in  e-book-backend-db-cache.c  e-book-backend-exchange-factory.c  e-book-backend-exchange-factory.h  e-book-backend-exchange.c  e-book-backend-gal-factory.c  e-book-backend-gal-factory.h  e-book-backend-gal.c  e-book-backend-gal.h
src/calendar/: Makefile.am  Makefile.in  e-cal-backend-exchange-calendar.c  e-cal-backend-exchange-factory.c  e-cal-backend-exchange-tasks.c  e-cal-backend-exchange.c  e-cal-backend-exchange.h  e2k-cal-query.c
src/camel/: Makefile.am  Makefile.in  camel-exchange-folder.c  camel-exchange-folder.h  camel-exchange-journal.c  camel-exchange-journal.h  camel-exchange-provider.c  camel-exchange-search.c  camel-exchange-search.h  camel-exchange-store.c  camel-exchange-store.h  camel-exchange-summary.c  camel-exchange-summary.h  camel-exchange-transport.c  camel-exchange-transport.h  camel-stub-constants.h  camel-stub-marshal.c  camel-stub-marshal.h  camel-stub.c  camel-stub.h
src/docs/: ChangeLog  Makefile.in
src/docs/reference/: Makefile.am  Makefile.in  gtk-doc.make
src/docs/reference/html/: E2kContext.html  E2kGlobalCatalog.html  E2kSecurityDescriptor.html  ch01.html  ch02.html  ch03.html  ch04.html  ch05.html  ch06.html  evolution-exchange-E2kAutoconfig.html  evolution-exchange-E2kContext-(private).html  evolution-exchange-E2kOperation-(private).html  evolution-exchange-E2kOperation.html  evolution-exchange-E2kProperties.html  evolution-exchange-E2kRestriction-(vaporware).html  evolution-exchange-E2kResult-(private).html  evolution-exchange-E2kSid.html  evolution-exchange-E2kUserDialog.html  evolution-exchange-MAPI.html  evolution-exchange-e2k-action.html  evolution-exchange-e2k-freebusy.html  evolution-exchange-e2k-http-utils.html  evolution-exchange-e2k-kerberos.html  evolution-exchange-e2k-restriction.html  evolution-exchange-e2k-result.html  evolution-exchange-e2k-rule.html  evolution-exchange-e2k-uri.html  evolution-exchange-e2k-utils.html  evolution-exchange-e2k-xml-utils.html  evolution-exchange-test-utils.html  evolution-exchange-xntlm-des.html  evolution-exchange-xntlm-md4.html  evolution-exchange-xntlm.html  evolution-exchange.devhelp  evolution-exchange.devhelp2  index.html  index.sgml  ximian-connector-autoconfig.html  ximian-connector-bug-private.html  ximian-connector-bug-xml.html  (+12 more)
src/docs/reference/tmpl/: e2k-action.sgml  e2k-autoconfig.sgml  e2k-context-private.sgml  e2k-context.sgml  e2k-freebusy.sgml  e2k-global-catalog.sgml  e2k-http-utils.sgml  e2k-kerberos.sgml  e2k-operation-private.sgml  e2k-operation.sgml  e2k-properties.sgml  e2k-restriction-vapor.sgml  e2k-restriction.sgml  e2k-result-private.sgml  e2k-result.sgml  e2k-rule.sgml  e2k-security-descriptor.sgml  e2k-sid.sgml  e2k-uri.sgml  e2k-user-dialog.sgml  e2k-utils.sgml  e2k-xml-utils.sgml  mapi.sgml  test-utils.sgml  xntlm-des.sgml  xntlm-md4.sgml  xntlm.sgml
src/docs/reference/xml/: e2k-action.xml  e2k-autoconfig.xml  e2k-context-private.xml  e2k-context.xml  e2k-freebusy.xml  e2k-global-catalog.xml  e2k-http-utils.xml  e2k-kerberos.xml  e2k-operation-private.xml  e2k-operation.xml  e2k-properties.xml  e2k-restriction-vapor.xml  e2k-restriction.xml  e2k-result-private.xml  e2k-result.xml  e2k-rule.xml  e2k-security-descriptor.xml  mapi.xml  (+9 more)
src/eplugin/: Makefile.in
src/mail/: Makefile.am  Makefile.in  mail-stub-exchange.c  mail-stub-exchange.h  mail-stub-listener.c  mail-stub-listener.h  mail-stub.c  mail-stub.h  mail-utils.c  mail-utils.h
src/po/: ChangeLog  LINGUAS  POTFILES.in  POTFILES.skip  bg.po  bn.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  en_GB.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  he.po  hi.po  hu.po  id.po  it.po  ja.po  ko.po  lt.po  ml.po  nb.po  nl.po  pa.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sl.po  sr.po  sr@latin.po  sv.po  (+5 more)
src/server/: Makefile.in
src/server/lib/: Makefile.in
src/server/storage/: Makefile.in
src/server/xntlm/: Makefile.in
src/storage/: GNOME_Evolution_Exchange_Storage.server.in.in  Makefile.am  Makefile.in  exchange-autoconfig-wizard.c  exchange-autoconfig-wizard.glade  exchange-autoconfig-wizard.h  exchange-change-password.c  exchange-change-password.glade  exchange-change-password.h  exchange-component.c  exchange-component.h  exchange-config-listener.c  exchange-config-listener.h  exchange-migrate.c  exchange-migrate.h  exchange-storage.c  exchange-storage.h  main.c  migr-test.c  ximian-connector-setup.c
src/tools/: Makefile.in
