AM_CPPFLAGS = \
	-I$(top_srcdir) \
	-I$(top_srcdir)/storage \
	-DG_LOG_DOMAIN=\"e-book-backend-exchange\" \
	$(ADDRESSBOOK_CFLAGS) \
	$(LIBEXCHANGE_CFLAGS) \
	$(LDAP_CFLAGS)

if HAVE_LIBDB
AM_CPPFLAGS += $(DB_CFLAGS)
endif

# GConf schemas

schemadir   = $(GCONF_SCHEMA_FILE_DIR)
schema_in_files = apps_exchange_addressbook.schemas.in.in
schema_DATA = $(schema_in_files:.schemas.in.in=-$(BASE_VERSION).schemas)
%-$(BASE_VERSION).schemas.in: %.schemas.in.in
	cp $< $@

@INTLTOOL_SCHEMAS_RULE@

install-data-local:
if OS_WIN32
	if test -z "$(DESTDIR)" ; then  \
		for p in $(schema_DATA) ; do  \
			(echo set GCONF_CONFIG_SOURCE=$(GCONF_SCHEMA_CONFIG_SOURCE);  \
			 echo $(GCONFTOOL) --makefile-install-rule $$p) >_temp.bat;  \
			cmd /c _temp.bat;  \
			rm _temp.bat;  \
		done  \
	fi
else
	if test -z "$(DESTDIR)" ; then  \
		for p in $(schema_DATA) ; do  \
			GCONF_CONFIG_SOURCE=$(GCONF_SCHEMA_CONFIG_SOURCE) $(GCONFTOOL) --makefile-install-rule $$p;  \
		done  \
	fi
endif

noinst_LTLIBRARIES = libexchangeaddressbook.la

libexchangeaddressbook_la_SOURCES = \
	e-book-backend-exchange.c \
	e-book-backend-exchange.h \
	e-book-backend-exchange-factory.c \
	e-book-backend-exchange-factory.h \
	e-book-backend-gal-factory.c \
	e-book-backend-gal-factory.h \
	e-book-backend-gal.c \
	e-book-backend-gal.h

if HAVE_LIBDB
libexchangeaddressbook_la_SOURCES += \
	e-book-backend-db-cache.c \
	e-book-backend-db-cache.h

libexchangeaddressbook_la_LIBADD =  \
	$(DB_LIBS)

libexchangeaddressbook_la_LDFLAGS = \
	-module -avoid-version $(NO_UNDEFINED)
endif

EXTRA_DIST = \
	$(schema_in_files)

CLEANFILES =  \
	apps_exchange_addressbook-$(BASE_VERSION).schemas

-include $(top_srcdir)/git.mk
